backend plus routing logic

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_aG9wZWZ1bC1zcGFuaWVsLTE4LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY =sk_test_NUjYYxQVKy0DVj0vPgEcFWFORIQJYilZIJyVSeHTEX
