--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
-    "@clerk/clerk-react": "^5.9.1",
+    "@clerk/backend": "^1.13.5",
+    "@clerk/clerk-react": "^5.9.4",
     "@cloudflare/kv-asset-handler": "^0.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -18,10 +22,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001", 
+
   "eslintConfig": {
     "extends": [
       "react-app",
