--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@clerk/backend": "^1.13.5",
     "@clerk/clerk-react": "^5.9.4",
@@ -10,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -26,8 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001", 
-
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
