--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently  \"npm start\" \"npx wrangler dev\""
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
+    "file-loader": "^6.2.0",
     "wrangler": "^3.78.10"
   }
 }
