--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,16 @@
 name = "login-test"
 type = "javascript"
 compatibility_date = "2024-09-26"
-
 account_id = "756c633bf2948763f2ee715b68f92266"
 workers_dev = true
 
+[[kv_namespaces]] 
+binding = "profit"
+id = "3844523479c64024aa4aeafc5c8c3b9f" 
+
+
 [site]
-
 bucket = "./build"
-
-[[redirects]]
-from = "your-domain.com/*"
-to = "/index.html"
-status = 200
 
 [vars]
 REACT_APP_CLERK_PUBLISHABLE_KEY= "pk_test_aG9wZWZ1bC1zcGFuaWVsLTE4LmNsZXJrLmFjY291bnRzLmRldiQ"
