--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@clerk/backend": "^1.13.5",
     "@clerk/clerk-react": "^5.9.4",
     "@cloudflare/kv-asset-handler": "^0.3.4",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
