--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^3.0.1",
     "reactjs-popup": "^2.0.6",
