project functional bug fix time

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_aG9wZWZ1bC1zcGFuaWVsLTE4LmNsZXJrLmFjY291bnRzLmRldiQ
 REACT_APP_CLERK_SECRET_KEY=sk_test_NUjYYxQVKy0DVj0vPgEcFWFORIQJYilZIJyVSeHTEX
+CLOUD_NAME = 'duv7zmdkz'; // Replace with your Cloudinary cloud name
+CLOUD_KEY = 'Y166311878598385';         // Replace with your Cloudinary API key
+CLOUD_SECRET = 'MAdK2AQ-XE1VwC9-JNgqLjCM6e0';
